--- a/views/clients/single.ejs
+++ b/views/clients/single.ejs
@@ -39,7 +39,7 @@
                         <i class="fa fa-linkedin btn btn-default btn-xs"></i>
                     </div>
                 </div>
-                <img alt="logo" class="img-circle m-b m-t-md" src="<%=client.avatar%>">
+                <img src="<%=client.avatar%>" height="250" width="250" class="img-circle m-b m-t-md" alt="logo">
                 <h3><a href=""><%=client.first_name%> <%=client.last_name%> </a></h3>
                 <div class="text-muted font-bold m-b-xs"><%=client.email%></div>
                 <p>
@@ -410,6 +410,8 @@
 </div>
 
 <% include partials/footer %>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.MAPS_KEY%>"></script>
 
 <script>
 // When the window has finished loading google map
