--- a/views/projects/home.ejs
+++ b/views/projects/home.ejs
@@ -13,6 +13,11 @@
                     <i class="fa fa-arrow-up"></i>
                 </div>
             </a>
+            <div id="hbreadcrumb" class="pull-right m-t-lg">
+                <ol class="hbreadcrumb breadcrumb">
+                    <li><a href="/projects/new">New</a></li>
+                </ol>
+            </div>
             <h2 class="font-light m-b-xs">
                 Projects
             </h2>
